# cxtream

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CNAME  LICENSE.txt  README.md  README.txt  base64_8hpp_source.html  batch_8hpp_source.html  buffer_8hpp_source.html  classcxtream_1_1csv__istream__range-members.html  classcxtream_1_1csv__istream__range.html  classcxtream_1_1dataframe-members.html  classcxtream_1_1dataframe.html  classcxtream_1_1index__mapper-members.html  classcxtream_1_1index__mapper.html  classcxtream_1_1python_1_1range-members.html  classcxtream_1_1python_1_1range.html  classcxtream_1_1stream_1_1column__base-members.html  classcxtream_1_1stream_1_1column__base.html  classcxtream_1_1thread__pool-members.html  classcxtream_1_1thread__pool.html  column_8hpp_source.html  converter_8hpp_source.html  core_2stream_8hpp_source.html  core_2utility_8hpp_source.html  core_8hpp_source.html  create_8hpp_source.html  csv_8hpp_source.html  dataframe_8hpp_source.html  dir_06172fd2ce19763dc6bc76fc33924124.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_37433088df51c93662ad4112c2ae0300.html  dir_3e7c708b5fce53d143e8f6d48d9742c5.html  dir_453640859cfc4e9268868ec6c20756ed.html  dir_550b294e0cf01bfb872282d2eb349b75.html  dir_5a6e3f23fb432c08124ff75b13ee6269.html  dir_634294b2a865551ef592f6ed24f0646f.html  dir_68995e76406bc38a3b0bbdf17e58b70a.html  (+77 more)
.circleci/: config.yml
cmake/: AddPythonStream.cmake  BoostTest.cmake  CxtreamConfig.cmake.in  FindBoostPython3.cmake  FindPythonNumPy.cmake  FindPythonSuffix.cmake  TensorflowShared.cmake  TensorflowStatic.cmake  build_config.hpp.in  build_tensorflow.sh  setup.cfg.in  setup.py.in
doc/: CMakeLists.txt  Doxyfile.in  clean-gh-pages.cmake  installation.md  mainpage.md
example/: cxflow_stream_iteration.py  demo_stream_iteration.py  iterate_stream.py
include/: augmenter.hpp  column_transform.hpp  cxtream.hpp
include/cxtream/: batch.hpp  build_config.hpp  column.hpp  column_transform.hpp  core.hpp  create.hpp  drop.hpp  for_each.hpp  pyboost_range.hpp  python.hpp  tensorflow.hpp  transform.hpp
include/cxtream/core/: base64.hpp  batch.hpp  buffer.hpp  column.hpp  create.hpp  csv.hpp  dataframe.hpp  drop.hpp  for_each.hpp  groups.hpp  index_mapper.hpp  label.hpp  stream.hpp  thread.hpp  transform.hpp  utility.hpp
include/cxtream/core/stream/: batch.hpp  buffer.hpp  column.hpp  create.hpp  drop.hpp  filter.hpp  for_each.hpp  random_fill.hpp  template_arguments.hpp  transform.hpp  unpack.hpp
include/cxtream/core/utility/: filesystem.hpp  random.hpp  string.hpp  template_arguments.hpp  tuple.hpp  vector.hpp
include/cxtream/python/: initialize.hpp  pyboost_initialize.hpp  pyboost_range.hpp  pyboost_range_iterator.hpp  range.hpp  stream.hpp  utility.hpp
include/cxtream/python/stream/: converter.hpp  iterator.hpp
include/cxtream/python/utility/: pyboost_column_converter.hpp  pyboost_cv3_converter.hpp  pyboost_cv_converter.hpp  pyboost_fs_path_converter.hpp  pyboost_is_registered.hpp  pyboost_ndarray_converter.hpp
include/cxtream/tensorflow/: load_graph.hpp  run_graph.hpp
include/cxtream/utility/: pyboost_column_converter.hpp  pyboost_fs_path_converter.hpp  pyboost_range.hpp  template_arguments.hpp  tuple.hpp
include/cxtream/view/: buffer.hpp
include/utility/: pyboost_column_converter.hpp  pyboost_columns_converter.hpp  pyboost_cv3_converter.hpp  pyboost_fs_path_converter.hpp  pyboost_range.hpp  tuple.hpp
include/view/: batch.hpp  buffer.hpp  buffered.hpp
search/: all_1.js  all_10.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  functions_0.js  functions_1.js  functions_10.js  functions_12.js  functions_13.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_d.js  functions_e.js  (+7 more)
src/: iterate_stream.py  stream.hpp
src/cpp_py_utils/: pyboost_cv3_converter.cpp  pyboost_module.cpp
src/pyboost_module/: pyboost_cv3_converter.cpp  pyboost_module.cpp
src/python/: initialize.cpp  pyboost_initialize.cpp
src/python/utility/: pyboost_cv2_converter.cpp  pyboost_cv3_converter.cpp  pyboost_fs_path_converter.cpp
src/tensorflow/: load_graph.cpp
stream/: CMakeLists.txt  column_stream.hpp  cxflow_stream.hpp  demo_stream.hpp  mnist_stream.hpp  mnist_stream_py.cpp  simple_stream.hpp
stream/cmake/: FindPython3Suffix.cmake  FindPythonSuffix.cmake
test/: CMakeLists.txt  batch.cpp  buffer.cpp  column_transform.cpp  common.hpp  create.cpp  drop.cpp  for_each.cpp  transform.cpp
test/core/: CMakeLists.txt  base64.cpp  batch.cpp  buffer.cpp  common.hpp  create.cpp  csv.cpp  dataframe.cpp  drop.cpp  for_each.cpp  groups.cpp  index_mapper.cpp  label.cpp  thread.cpp  transform.cpp
test/core/stream/: CMakeLists.txt  batch.cpp  buffer.cpp  create.cpp  drop.cpp  filter.cpp  for_each.cpp  random_fill.cpp  transform.cpp  transform.hpp  transform2.cpp  transform3.cpp  unpack.cpp
test/core/utility/: CMakeLists.txt  string.cpp  tuple.cpp  vector.cpp
test/python/: CMakeLists.txt  pyboost_range.py  pyboost_range.py.cpp  pyboost_range_iterator.py  pyboost_range_iterator.py.cpp
test/python/stream/: CMakeLists.txt  converter.py.cpp  iterator.py  iterator.py.cpp
test/python/utility/: CMakeLists.txt  pyboost_column_converter.py  pyboost_column_converter.py.cpp  pyboost_cv_converter.py.cpp  pyboost_fs_path_converter.py.cpp  pyboost_is_registered.py.cpp  pyboost_ndarray_converter.py  pyboost_ndarray_converter.py.cpp
test/utility/: CMakeLists.txt  tuple.cpp
test/view/: CMakeLists.txt  batch.cpp  buffer.cpp  buffered.cpp
